force-app/main/default/objects/GetFeedback_Setting__mdt/GetFeedback_Setting__mdt.object-meta.xml
<CustomObject>
    <label>GetFeedback Setting</label>
    <pluralLabel>GetFeedback Settings</pluralLabel>
</CustomObject>