force-app/main/default/objects/GetFeedback_Setting__mdt/fields/EmailFromAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailFromAddress__c</fullName>
    <label>Email From Address</label>
    <type>Email</type>
</CustomField>