force-app/main/default/objects/GetFeedback_Setting__mdt/fields/ProjectStages__c.field-meta.xml
<CustomField>
    <fullName>ProjectStages__c</fullName>
    <defaultValue>&apos;Define, Design, Build, Verify, Launch&apos;</defaultValue>
    <description>Stages used to determine projects included in surveys</description>
    <inlineHelpText>Project Stages used when selecting Project Survey Contacts separated by a comma (i.e. Define, Design, Build, Verify, Launch</inlineHelpText>
    <label>Project Stages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>