force-app/main/default/objects/GetFeedback_Setting__mdt/fields/SubjectPrefix__c.field-meta.xml
<CustomField>
    <fullName>SubjectPrefix__c</fullName>
    <label>Subject Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>