force-app/main/default/objects/GetFeedback_Setting__mdt/fields/SurveyLink__c.field-meta.xml
<CustomField>
    <fullName>SurveyLink__c</fullName>
    <label>Survey Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>