force-app/main/default/objects/GetFeedback_Setting__mdt/fields/SurveyLinkHTML__c.field-meta.xml
<CustomField>
    <fullName>SurveyLinkHTML__c</fullName>
    <label>Survey Link HTML</label>
    <length>255</length>
    <type>Text</type>
</CustomField>