force-app/main/default/objects/GetFeedback_Setting__mdt/fields/SurveyLinkText__c.field-meta.xml
<CustomField>
    <fullName>SurveyLinkText__c</fullName>
    <label>Survey Link Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>